--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Setup Bun              
         uses: oven-sh/setup-bun@v1
+        with: 
+          run_install: false
 
       - name: Install dependencies
         run: bun install
