--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -12,13 +12,24 @@ jobs:
       - name: Show node version
         run: node --version
 
-      - name: Setup Bun              
-        uses: oven-sh/setup-bun@v1
-        with: 
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 7
           run_install: false
 
-      - name: Install dependencies
-        run: bun install
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-      - name: Build the app
-        run: bun run build
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install
